[package]
name = "hyper-reverse-proxy"
version = "0.5.2-dev"
authors = [
  "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
  "Felipe Noronha <felipenoris@gmail.com>",
  "Jan Kantert <jan-hyper-reverse-proxy@kantert.net>",
]
license = "Apache-2.0"
description = "A simple reverse proxy, to be used with Hyper and Tokio."
homepage = "https://github.com/felipenoris/hyper-reverse-proxy"
documentation = "https://docs.rs/hyper-reverse-proxy"
repository = "https://github.com/felipenoris/hyper-reverse-proxy"
keywords = ["http", "hyper"]
categories = ["network-programming", "web-programming"]
readme = "README.md"
edition = "2021"

include = ["Cargo.toml", "LICENSE", "src/**/*"]

[[bench]]
name="internal"
harness = false

[dependencies]
hyper = { version = "1", features = ["client"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1", "http2"] }
tokio = { version = "1", features = ["io-util", "rt"] }
tracing = "0.1"

[dev-dependencies]
lazy_static = "1"
hyper = { version = "1", features = ["client", "server"] }
hyper014 = { package = "hyper", version = "0.14", features = ["server"] }
futures = "0.3"
async-trait = "0.1"
async-tungstenite = { version = "0.25", features = ["tokio-runtime"] }
tokio-test = "0.4"
test-context = "0.1"
tokiotest-httpserver = "0.2"
hyper-trust-dns = { version = "0.5", features = [
  "rustls-http2",
  "dnssec-ring",
  "dns-over-https-rustls",
  "rustls-webpki"
] }
rand = "0.8"
tungstenite = "0.21"
url = "2"
criterion = "0.5"
http-body-util = "0.1"
tokio-stream = { version = "0.1", features = ["net"] }
tokio = { version = "1", features = ["io-util", "rt", "time"] }
# http02 = { package = "http", version = "0.2" }

[features]

__bench=[]
